--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,7 +548,7 @@ dl, ol, ul {
 	background-attachment: fixed;
 	z-index: 1;
 	padding-bottom: 0px; */
-	background: url("../img/home-bg.jpg");
+	background: url("../img/home_bkgd.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -658,6 +658,7 @@ dl, ol, ul {
     padding: 0px 5px;
     margin: 0px 8px;
     color: #fff;
+	font-size: larger;
 }
 .social-media a:hover {
 	opacity: .5;
